src/App.css
html {
    scroll-behavior: smooth;
}

body {
    background: linear-gradient(#202020, black);
    background-attachment: fixed;
}

#root {
    width: 40%;
    max-width: 1280px;
    margin: 0 auto;
    padding: 2rem;
    text-align: center;
}

.url {
    width: 90%;
}

p {
    width: 100%;
    text-align: left;
}

.moreInfo {
    color: inherit;
    font-weight: inherit;
    border-radius: 10%;
}

.moreInfo:hover {
    color: black;
    background-color: white;
}

.infoPanel {
    padding: 2%;
    height: 90%;
    max-width: 20%;
    background-color: black;
    /* border:  solid white; */
    border-radius: 10px;
    position: fixed;
    right: 0.5%;
    top: 1%;
    box-shadow: black;
    scroll-behavior: auto;
    overflow-y: auto;
    overflow-wrap: normal;
    /* //2023-05-21: copied from https://www.w3schools.com/css/css3_shadows_box.asp */
    box-shadow: 0 8px 16px 0 rgb(255, 255, 255, 0.2),
        0 12px 40px 0 rgba(255, 255, 255, 0.19);
    text-align: left;
}

.closeX {
    position: fixed;
    top: 1em;
    right: 1em;
    background-color: transparent;
    font-stretch: wider;
    color: white;
}

.closeX:hover {
    background-color: white;
    color: black;
    border: none;
}

.portrait {
    max-width: 90%;
    border: solid white 0.15em;
    background: linear-gradient(#282828, #101010);
}

.searchCount {
    font-size: medium;
    font-weight: 700;
    color: white;
}

.searchResult {
    max-height: 8%;
    overflow: hidden;
    padding: 1%;
    margin: 2%;
    color: lightgray;
    background-color: rgb(80, 80, 80, 0.5);
    width: 90%;
    border-radius: 5px;
    font-size: small;
    text-align: left;
}

.searchResult:hover {
    background-color: white;
    color: black;
}

.searchResultIndex {
    padding-left: 3px;
    padding-right: 3px;
    font-weight: 400;
    margin-right: 5%;
}

.quoteHighlight {
    color: inherit;
    font-weight: inherit;
    border-radius: 0.3em;
    background-color: #484756;
}

.place {
    position: absolute;
    left: 3%;
    user-select: none;
    z-index: 5;
    border-radius: 10%;
    background: black;
    padding: 0.3%;
    margin: 0%;
}

.place:hover {
    color: black;
    background: white;
}

.buttonLink {
    position: fixed;
    top: 1%;
    border: none;
    background: black;
    z-index: 10;
    border-radius: 10%;
    color: lightgray;
    font-weight: 200;
    padding: 0.3%;
    margin: 0%;
}

.buttonLink:hover {
    color: black;
    background: white;
}

.end {
    text-align: center;
    font-weight: 1000;
}

.lastupdated {
    position: fixed;
    left: 1em;
    bottom: 1em;
    /* top: 3em; */
    font-weight: 100;
    font-size: smaller;
    background-color: black;
    padding: 1em;
    border-radius: 0.5em;
    z-index: 10;
}

.imageCredit {
    font-size: xx-small;
    color: white;
    text-align: left;
    display: block;
}

.copyright {
    margin-top: 5%;
    font-weight: 100;
    font-size: smaller;
}

